# cookiecutter-pypa-gitops

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cookiecutter.json
.github/workflows/: dev.yml
_hooks/: post_gen_project.py
tests/: environment.yml  test_bake_project.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: dev.yml  release.yml
{{cookiecutter.repo_name}}/docs/: api.md  conf.py  environment.yml  usage.md
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.python_module_name}}.py
